# libtga

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  configure  configure.in  mkinstalldirs
doc/: Makefile.am  Makefile.in  README  libtga.info  libtga.texinfo
doc/api/: Makefile.in
examples/: CMakeLists.txt  Makefile.am  Makefile.in  decode.c  encode.c  sane.c  tgacpy.c  tgadump.c  tgaunmap.c  utils.c  utils.h
include/: tga.h
src/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  tga.c  tga.h  tga_private.h  tgaconfig.h  tgaconfig.h.in  tgaerror.c  tgamem.c  tgaread.c  tgawrite.c
