# Process this file with autoconf to produce a configure script.
AC_INIT
AM_INIT_AUTOMAKE(libtga, 0.1.6)
AC_REVISION($Revision: 1.8 $)dnl

AM_CONFIG_HEADER(src/tgaconfig.h)
AC_PROG_MAKE_SET

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_PROG_LIBTOOL

AC_HEADER_STDC

AC_TYPE_OFF_T
AC_TYPE_SIZE_T

AC_CHECK_SIZEOF(unsigned long)
AC_CHECK_SIZEOF(unsigned int)
AC_CHECK_SIZEOF(unsigned short)

AC_C_BIGENDIAN
AC_C_CONST

AC_CONFIG_FILES([Makefile src/Makefile examples/Makefile doc/Makefile doc/api/Makefile])
AC_OUTPUT
